[metadata]
name = powersimdata
version = 0.5.2
author = Breakthrough Energy
author_email = sciences@breakthroughenergy.org
description = Power Simulation Data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Breakthrough-Energy/PowerSimData
project_urls =
    Bug Tracker = https://github.com/Breakthrough-Energy/PowerSimData/issues
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
packages = find:
python_requires = >=3.8
install_requires =
    networkx
    numpy
    pandas
    paramiko
    scipy
    tqdm
    requests
    fs
    fs.sshfs
    fs-azureblob

[options.package_data]
powersimdata =
    network/*/data/*.csv
    design/investment/data/*.csv
    design/investment/data/*/*
    utility/templates/*.csv
